# MultiVessel_Simulation

./: README.md
multiple_vessels/: CMakeLists.txt  README.md  package.xml
multiple_vessels/block_diagrams/: multiVessel_block_diagram.drawio  userDefinedVessels.drawio
multiple_vessels/json_files/: Global_Waypoints_userDefinedVessels.json  Json_Global_Waypoints-2.json  Json_Global_Waypoints.json  Json_Global_Waypoints_matlab.json  README.md  config.json  config_user_defined_vessels.json
multiple_vessels/launch/: one_vessel.launch  vessels.launch  vrx_multivessel_parametric.launch
multiple_vessels/multiple_vessels_worlds/: multiple_vessels (copy).world  multiple_vessels.world
multiple_vessels/multivessel_msgs/: CMakeLists.txt
multiple_vessels/multivessel_msgs/msg/: VesselDetails.msg  VesselPose.msg
multiple_vessels/nodes/: Perception_Distance_Measurement_List.json  multiple_vessel_controller_purePursuit.py  multiple_vessel_global_path_planner_node.py  multiple_vessel_local_path_planner_RRT.py  multiple_vessel_node_starter (copy).py  multiple_vessel_node_starter.py  multiple_vessel_ship_domain_node.py  multiple_vessel_switch_mechanism.py  multiple_vessel_trajectory_tracker.py  perception_detect_vessels_in_sensing_range_node.py  perception_pose_aggregator_node.py  simulation_local_path_plotter_node.py  simulation_logger_node.py  test_orientation.py
multiple_vessels/scripts/: multiple_vessel_simulation_starter.py  vessel_spawner.py
multivessel_msgs/: package.xml
multivessel_msgs/msg/: Perception.msg
(+7 files in other folders)
