<?xml version="1.0"?>
<package format="2">
  <name>multivessel_msgs</name>
  <version>0.0.1</version>
  <description>multivessel_msgs package. Contains message types for multiVessel package to operate.</description>
  <maintainer email="2132040105@ismu.edu.tr">Mustafa Bayrak</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
